cluster/base/kubernetes-dashboard/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard # Ensure this matches the namespace of your Dashboard deployment
spec:
  entryPoints:
    - web # Or 'web' if you're not using HTTPS
  routes:
    - match: Host(`dashboard.cis240470.projects.jetstream-cloud.org`) # Replace with your desired hostname
      kind: Rule
      services:
        - name: kubernetes-dashboard
          port: 8443 # Default HTTPS port for Kubernetes Dashboard
